--- a/apps/voice-dashboard/package.json
+++ b/apps/voice-dashboard/package.json
@@ -21,19 +21,26 @@
   },
   "dependencies": {
     "@ai-sdk/react": "^1.0.0",
+    "@aws-sdk/client-s3": "^3.992.0",
+    "@aws-sdk/s3-request-presigner": "^3.992.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "@sentry/nextjs": "^8.0.0",
     "@supabase/ssr": "^0.5.0",
     "@supabase/supabase-js": "^2.47.0",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "ai": "^4.0.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "^15.1.7",
+    "openai": "^6.22.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^2.6.1",
+    "web-push": "^3.6.7",
     "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
@@ -45,6 +52,7 @@
     "@types/node": "^22.10.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/web-push": "^3.6.4",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.0.0",
     "autoprefixer": "^10.4.20",
