--- a/apps/admin-dashboard/package.json
+++ b/apps/admin-dashboard/package.json
@@ -22,7 +22,9 @@
     "test:load:report": "artillery report report.json --output report.html"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@sentry/nextjs": "^8.0.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-table": "^8.21.2",
@@ -30,15 +32,14 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.2",
     "lucide-react": "^0.475.0",
-    "next": "15.1.6",
+    "next": "^15.1.7",
     "nuqs": "^2.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2",
-    "@sentry/nextjs": "^8.0.0"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.50.0",
