--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.0.0",
     "lint-staged": "^15.2.0",
+    "playwright": "^1.58.2",
     "prettier": "^3.2.0",
     "prettier-plugin-tailwindcss": "^0.6.0",
     "standard-version": "^9.5.0",
@@ -97,5 +98,9 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
+    "pg": "^8.18.0"
+  }
 }
