--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,50 +1,19 @@
 {
-  "name": "AROS - Full Stack Development",
-  "dockerComposeFile": "../docker-compose.yml",
-  "service": "voice-dashboard",
-  "workspaceFolder": "/app",
-  
+  "name": "AROS Auto",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:18",
   "features": {
-    "ghcr.io/devcontainers/features/node:1": {
-      "version": "20"
-    },
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    "ghcr.io/devcontainers/features/github-cli:1": {}
+    "ghcr.io/devcontainers/features/postgres:1": {
+      "version": "15",
+      "postgresUser": "postgres",
+      "postgresPassword": "postgres",
+      "postgresDb": "aros"
+    }
   },
-
+  "postCreateCommand": "sudo service postgresql start && sleep 3 && PGPASSWORD=postgres psql -U postgres -d aros -c \"CREATE TABLE IF NOT EXISTS organizations (id UUID PRIMARY KEY DEFAULT gen_random_uuid(), name TEXT); CREATE TABLE IF NOT EXISTS customers (id UUID PRIMARY KEY DEFAULT gen_random_uuid(), name TEXT, phone TEXT, organization_id UUID REFERENCES organizations(id)); CREATE TABLE IF NOT EXISTS vehicles (id UUID PRIMARY KEY DEFAULT gen_random_uuid(), plate TEXT, model TEXT, brand TEXT, customer_id UUID REFERENCES customers(id)); CREATE TABLE IF NOT EXISTS work_orders (id UUID PRIMARY KEY DEFAULT gen_random_uuid(), number TEXT, status TEXT DEFAULT 'pending', customer_id UUID REFERENCES customers(id), vehicle_id UUID REFERENCES vehicles(id)); INSERT INTO organizations (id, name) VALUES ('11111111-1111-1111-1111-111111111111', 'Officina Demo') ON CONFLICT DO NOTHING; INSERT INTO customers (id, name, phone, organization_id) VALUES ('22222222-2222-2222-2222-222222222222', 'Mario Rossi', '3331234567', '11111111-1111-1111-1111-111111111111') ON CONFLICT DO NOTHING; INSERT INTO vehicles (id, plate, model, brand, customer_id) VALUES ('44444444-4444-4444-4444-444444444444', 'AB123CD', 'Panda', 'Fiat', '22222222-2222-2222-2222-222222222222') ON CONFLICT DO NOTHING;\" && echo DATABASE_URL=postgresql://postgres:postgres@localhost:5432/aros > apps/voice-dashboard/.env && echo DATABASE_URL=postgresql://postgres:postgres@localhost:5432/aros > apps/admin-dashboard/.env && pnpm install",
   "forwardPorts": [3000, 3001, 5432],
   "portsAttributes": {
-    "3000": {
-      "label": "Voice Dashboard (Gestionale)",
-      "onAutoForward": "notify"
-    },
-    "3001": {
-      "label": "Admin Dashboard",
-      "onAutoForward": "notify"
-    },
-    "5432": {
-      "label": "PostgreSQL Database",
-      "onAutoForward": "silent"
-    }
-  },
-
-  "postCreateCommand": "npm install -g pnpm && pnpm install",
-  "postStartCommand": "pnpm dev",
-
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "dbaeumer.vscode-eslint",
-        "bradlc.vscode-tailwindcss",
-        "esbenp.prettier-vscode",
-        "ms-vscode.vscode-typescript-next",
-        "Prisma.prisma"
-      ],
-      "settings": {
-        "terminal.integrated.defaultProfile.linux": "bash"
-      }
-    }
-  },
-
-  "remoteUser": "root"
+    "3000": {"label": "Voice Dashboard", "onAutoForward": "openPreview"},
+    "3001": {"label": "Admin Dashboard"},
+    "5432": {"label": "PostgreSQL"}
+  }
 }
