🚀 TEAM MODE: 20 agents - Fixed devcontainer with docker-compose, PostgreSQL auto-setup, init.sql with demo data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,10 @@
-# AROS - Docker Compose per GitHub Codespaces
-# Avvia PostgreSQL locale + Next.js app
-
 version: '3.8'
 
 services:
-  # Database PostgreSQL
   postgres:
-    image: postgres:15-alpine
+    image: postgres:15
     container_name: aros-postgres
+    restart: unless-stopped
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -16,48 +13,48 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./supabase/migrations:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d aros"]
       interval: 5s
       timeout: 5s
       retries: 5
 
-  # Admin Dashboard (Next.js)
-  admin-dashboard:
+  voice-dashboard:
     build:
-      context: ./apps/admin-dashboard
-      dockerfile: Dockerfile
-    ports:
-      - "3001:3000"
-    environment:
-      - NODE_ENV=development
-      - NEXT_PUBLIC_SUPABASE_URL=http://localhost:5432
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/aros
+      context: .
+      dockerfile: apps/voice-dashboard/Dockerfile
+    container_name: aros-voice-dashboard
+    restart: unless-stopped
     depends_on:
       postgres:
         condition: service_healthy
-    volumes:
-      - ./apps/admin-dashboard:/app
-      - /app/node_modules
-
-  # Voice Dashboard (Next.js)
-  voice-dashboard:
-    build:
-      context: ./apps/voice-dashboard
-      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=development
-      - NEXT_PUBLIC_SUPABASE_URL=http://localhost:5432
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/aros
+    volumes:
+      - ./apps/voice-dashboard:/app/apps/voice-dashboard
+      - /app/node_modules
+
+  admin-dashboard:
+    build:
+      context: .
+      dockerfile: apps/admin-dashboard/Dockerfile
+    container_name: aros-admin-dashboard
+    restart: unless-stopped
     depends_on:
       postgres:
         condition: service_healthy
+    ports:
+      - "3001:3001"
+    environment:
+      - NODE_ENV=development
+      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/aros
     volumes:
-      - ./apps/voice-dashboard:/app
+      - ./apps/admin-dashboard:/app/apps/admin-dashboard
       - /app/node_modules
 
 volumes:
   postgres_data:
+    driver: local
