--- a/package.json
+++ b/package.json
@@ -1,106 +1,35 @@
 {
   "name": "aiaros-fort-knox-dashboard",
   "version": "1.0.0",
-  "description": "AI-Augmented Resilient Operations System - Fort Knox Dashboard",
   "private": true,
   "scripts": {
-    "dev": "turbo run dev --parallel",
-    "dev:web": "turbo run dev --filter=dashboard",
-    "dev:api": "turbo run dev --filter=api",
-    "build": "turbo run build",
-    "build:web": "turbo run build --filter=dashboard",
-    "build:api": "turbo run build --filter=api",
-    "start": "turbo run start --parallel",
-    "start:prod": "docker-compose -f docker-compose.prod.yml up -d",
-    "lint": "turbo run lint",
-    "lint:fix": "turbo run lint:fix",
-    "type-check": "turbo run type-check",
-    "clean": "turbo run clean && rm -rf node_modules .turbo",
-    "test": "turbo run test",
-    "test:unit": "turbo run test:unit --parallel",
-    "test:unit:watch": "turbo run test:unit:watch --filter=dashboard",
-    "test:unit:coverage": "turbo run test:unit:coverage --filter=dashboard",
-    "test:integration": "turbo run test:integration",
-    "test:e2e": "turbo run test:e2e --filter=dashboard",
-    "test:e2e:ui": "turbo run test:e2e:ui --filter=dashboard",
-    "test:critical": "turbo run test:critical --filter=dashboard",
-    "test:api": "turbo run test:e2e --filter=api",
-    "test:ci": "turbo run test:ci",
-    "test:visual": "turbo run test:visual --filter=dashboard",
-    "test:perf": "lighthouse-ci",
-    "db:migrate": "turbo run migration:run --filter=api",
-    "db:migrate:generate": "turbo run migration:generate --filter=api",
-    "db:seed": "turbo run seed --filter=api",
-    "db:reset": "turbo run db:reset --filter=api",
-    "db:studio": "turbo run studio --filter=api",
-    "docker:up": "docker-compose up -d",
-    "docker:up:obs": "docker-compose -f docker-compose.yml -f docker/docker-compose.observability.yml up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f",
-    "docker:build": "docker-compose build",
-    "docker:clean": "docker-compose down -v && docker system prune -f",
-    "infra:up": "docker-compose -f docker-compose.prod.yml up -d",
-    "infra:down": "docker-compose -f docker-compose.prod.yml down",
-    "k8s:apply": "kubectl apply -k infra/k8s/",
-    "k8s:delete": "kubectl delete -k infra/k8s/",
-    "k8s:status": "kubectl get all -n ai-aros",
-    "deploy:staging": "vercel --target=staging",
-    "deploy:prod": "vercel --prod",
-    "deploy:script": "./scripts/deploy.sh",
-    "sentry:release": "sentry-cli releases new",
-    "sentry:finalize": "sentry-cli releases finalize",
-    "sentry:sourcemaps": "sentry-cli sourcemaps upload",
-    "analyze": "turbo run analyze --filter=dashboard",
-    "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "commit": "git-cz",
-    "release": "standard-version",
-    "release:minor": "standard-version --release-as minor",
-    "release:major": "standard-version --release-as major"
+    "dev": "concurrently \"cd apps/voice-dashboard && pnpm dev\" \"cd apps/admin-dashboard && pnpm dev\"",
+    "dev:voice": "cd apps/voice-dashboard && pnpm dev",
+    "dev:admin": "cd apps/admin-dashboard && pnpm dev",
+    "build": "cd apps/voice-dashboard && pnpm build && cd ../admin-dashboard && pnpm build",
+    "lint": "pnpm -r lint",
+    "test": "pnpm -r test"
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "@commitlint/cli": "^19.0.0",
     "@commitlint/config-conventional": "^19.0.0",
     "@lhci/cli": "^0.13.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^9.0.0",
-    "lint-staged": "^15.2.0",
-    "playwright": "^1.58.2",
-    "prettier": "^3.2.0",
+    "lint-staged": "^15.0.0",
+    "playwright": "1.58.2",
+    "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.6.0",
-    "standard-version": "^9.5.0",
-    "turbo": "^2.0.0"
+    "standard-version": "^9.5.0"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "pg": "^8.11.0"
   },
   "engines": {
-    "node": ">=20.0.0",
-    "pnpm": ">=9.0.0"
+    "node": ">=18.0.0"
   },
-  "packageManager": "pnpm@9.0.0",
-  "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{js,jsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,md,yaml,yml}": [
-      "prettier --write"
-    ]
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
-  "dependencies": {
-    "@supabase/supabase-js": "^2.97.0",
-    "pg": "^8.18.0"
-  }
+  "packageManager": "pnpm@9.0.0"
 }
